# SkyCruiseApi

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  docker-compose.dev.yml  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: pr.yml
authentication/: urls.py
authentication/serializers/: login.py  register.py
authentication/views/: login.py  register.py
general/: authentication.py
project/: settings.py  urls.py
scripts/: entrypoint.sh  production_data.py
skycruise/: conftest.py  manage.py
skycruise/airline/: admin.py  apps.py  urls.py
skycruise/airline/migrations/: 0001_initial.py  0002_alter_airline_logo.py
skycruise/airline/models/: airline.py
skycruise/airline/serializers/: airline.py
skycruise/airline/tests/: test_airline.py
skycruise/airline/views/: airline.py
skycruise/authentication/: apps.py  urls.py
skycruise/authentication/serializers/: login.py  password_reset.py  register.py  send_email.py  token_pair.py
skycruise/authentication/tests/: test_login.py  test_password_reset.py  test_register.py  test_rest_api.py  test_send_email.py
skycruise/authentication/views/: login.py  password_reset.py  register.py  send_email.py
skycruise/flight/: admin.py  apps.py  urls.py
skycruise/flight/filters/: flight.py
skycruise/flight/migrations/: 0001_initial.py  0002_alter_flight_arrival_time_and_more.py  0003_alter_flight_arrival_time_and_more.py  0004_flight_airline.py  0005_remove_flight_arrival_airport_and_more.py  0006_flight_tax_price_flight_travel_insurance_price.py  0007_flightstepover.py  0008_seat.py  0009_seat_is_available.py  0010_alter_seat_number.py  0011_rename_number_seat_seat_number.py
skycruise/flight/models/: flight.py
skycruise/flight/serializers/: flight.py
skycruise/general/: apps.py  authentication.py  error.py
skycruise/location/: admin.py  apps.py  urls.py
skycruise/project/: asgi.py  urls.py  wsgi.py
skycruise/reservation/: admin.py  apps.py  urls.py
skycruise/users/: admin.py  apps.py  urls.py
staticfiles/: staticfiles.json
users/: urls.py
users/migrations/: 0001_initial.py
users/models/: user.py
users/serializers/: profile.py
users/views/: profile.py  profile_view.py
(+58 files in other folders)
