[tool.poetry]
name = "skycruiseapi"
version = "0.1.0"
description = ""
authors = ["Aymen <bestaouiaymene@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework-simplejwt = "^5.3.1"
django = "^5.0.4"
djangorestframework = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
