[tool.poetry]
name = "skycruiseapi"
version = "0.1.0"
description = ""
authors = ["Aymen <bestaouiaymene@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework-simplejwt = "^5.3.1"
django = "^5.0.4"
djangorestframework = "^3.15.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
